--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rendr-app-template",
-  "version": "0.1.3",
+  "name": "mobitel",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/airbnb/rendr-app-template.git"
+    "url": "git://github.com/DuncanMacWeb/Mobitel.git"
   },
   "dependencies": {
     "express": "~>3",
